WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
158180
[JSC] op_new_arrow_func_exp is no longer necessary
https://bugs.webkit.org/show_bug.cgi?id=158180
Summary
[JSC] op_new_arrow_func_exp is no longer necessary
Yusuke Suzuki
Reported
2016-05-28 02:10:25 PDT
[JSC] op_new_arrow_func_exp is no longer necessary
Attachments
Patch
(10.44 KB, patch)
2016-05-28 02:11 PDT
,
Yusuke Suzuki
no flags
Details
Formatted Diff
Diff
Patch
(12.52 KB, patch)
2016-05-28 02:30 PDT
,
Yusuke Suzuki
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Yusuke Suzuki
Comment 1
2016-05-28 02:11:41 PDT
Created
attachment 280037
[details]
Patch
Yusuke Suzuki
Comment 2
2016-05-28 02:30:21 PDT
Created
attachment 280038
[details]
Patch
Saam Barati
Comment 3
2016-05-28 08:53:40 PDT
Comment on
attachment 280038
[details]
Patch r=me
Yusuke Suzuki
Comment 4
2016-05-28 10:24:36 PDT
Comment on
attachment 280038
[details]
Patch Thanks
WebKit Commit Bot
Comment 5
2016-05-28 10:45:57 PDT
Comment on
attachment 280038
[details]
Patch Clearing flags on attachment: 280038 Committed
r201487
: <
http://trac.webkit.org/changeset/201487
>
WebKit Commit Bot
Comment 6
2016-05-28 10:46:00 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug