Source/JavaScriptCore/llint/LowLevelInterpreter.asm
@@ -1516,11 +1516,6 @@ _llint_op_new_async_func_exp:
     callSlowPath(_llint_slow_path_new_async_func_exp)
     dispatch(4)
 
-_llint_op_new_arrow_func_exp:
-    traceExecution()
-    callSlowPath(_llint_slow_path_new_arrow_func_exp)
-    dispatch(4)
-
 _llint_op_set_function_name:
     traceExecution()
     callSlowPath(_llint_slow_path_set_function_name)
